# sleepwalk

./: .env.example  .gitignore  Cargo.toml  README.md  justfile  sleepwalk.example.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: config.rs  main.rs
crates/guestd/: Cargo.toml  README.md
crates/guestd/src/: channel.rs  clock.rs  framing.rs  guest.rs  lib.rs  pseudo_channel.rs  vsock.rs  wrap.rs
crates/harness/: Cargo.toml  README.md
crates/harness/src/: chaos.rs  lib.rs  loadgen.rs  recorder.rs  report.rs  schedule.rs
crates/hostd/: Cargo.toml  README.md
crates/hostd/src/: compat.rs  drain.rs  fc.rs  firecracker.rs  guestlink.rs  guestload.rs  lib.rs  migrate.rs  net.rs  process.rs  pseudo_firecracker.rs  quiesce.rs  registry.rs  statedir.rs  sysmem.rs  telemetry.rs  transfer.rs  uffd.rs  vm.rs
crates/hostd/src/fc/: real.rs
crates/hostd/tests/: lifecycle.rs  migrate.rs  restore.rs
crates/proto/: Cargo.toml  README.md
crates/proto/src/: compat.rs  fsm.rs  ids.rs  lib.rs  vsock.rs  wire.rs
crates/rebalancer/: Cargo.toml  README.md
crates/rebalancer/src/: control.rs  driver.rs  executor.rs  lib.rs  placement.rs  pseudo_executor.rs
crates/rebalancer/tests/: migration.rs
deploy/: README.md  docker-compose.yml
deploy/grafana/dashboards/: sleepwalk.json
deploy/grafana/provisioning/dashboards/: sleepwalk.yml
deploy/prometheus/: node-targets.json.example  prometheus.yml  targets.json.example
docs/: book.toml  environment.md  protocol.md
docs/adr/: 0004-cpu-tsc-compatibility-classes.md
docs/src/: SUMMARY.md  introduction.md  protocol.md
docs/src/architecture/: crates.md  data-flow.md  overview.md
docs/src/getting-started/: environment.md  just-targets.md  quickstart.md
docs/src/migration/: clock-fixup.md  overview.md  source.md  target-uffd.md  transfer.md
docs/src/operations/: cli.md  demos.md  networking.md  observability.md
docs/src/quiescence/: layers.md  race-rule.md
docs/src/rebalancing/: overview.md
docs/src/reference/: glossary.md  limitations.md
docs/src/security/: cpu-tsc.md  secrets.md
docs/theme/: custom.css
examples/ramstate/: Cargo.toml
examples/ramstate/src/: lib.rs  main.rs
images/: versions.toml
images/agent/: agent-serve.py  agent-turns.sh
images/agent/seed/: README.md
scripts/: agent-status.sh  build-agent-rootfs.sh  build-guest-rootfs.sh  demo.sh  dev-vm.sh  ensure-env.sh  fetch-artifacts.sh  host.sh  lib.sh  long-process-burst.sh  long-process-bursty.sh  long-process.sh  migrate-when-idle.sh  migrate.sh  net-host.sh  prepare.sh  remote.sh  setup.sh  start-agent.sh  status.sh  talk-agent.sh
scripts/cloud-init/: user-data.yaml
