# guestd — the in-VM supervisor: speaks the guest half of the vsock protocol,
# reports turn boundaries, holds the drain gate, takes secrets at boot, and
# fixes the clock up on resume. Internal crate. This first slice is the
# mock-testable core (the GuestChannel port + the supervisor state machine);
# the real AF_VSOCK transport and process-wrapping land in a /dev/kvm session.
[package]
name = "guestd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "sleepwalk in-VM supervisor (internal crate)."
publish = false

[features]
# The AF_VSOCK loopback round-trip test; needs Linux + the vsock_loopback module.
vsock-test = []

# The in-VM supervisor process (PID 1 of the guest rootfs).
[[bin]]
name = "guestd"
path = "src/bin/guestd.rs"

[dependencies]
proto.workspace = true
thiserror.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "sync", "io-util", "process"] }

# Real AF_VSOCK transport — Linux only. On macOS the vsock module is cfg'd out, so
# the supervisor still builds and tests against the in-memory channel.
[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.7"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "io-util", "rt-multi-thread", "time"] }
uuid.workspace = true
