# hostd — per-host daemon: Firecracker lifecycle, UFFD page server, snapshot
# transfer. Internal crate. This first slice is the mock-testable core (the
# FirecrackerApi port + the VM lifecycle orchestrator); the real Firecracker
# impl and jailer spawn land in a /dev/kvm session.
[package]
name = "hostd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "sleepwalk per-host daemon (internal crate)."
publish = false

[features]
# Integration tests that drive a real Firecracker process; need /dev/kvm and the
# fetched artifacts. Off by default so unit/mock tests run anywhere.
real-vm = []

[dependencies]
proto.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "sync", "net", "fs", "io-util"] }
hyper = { workspace = true, features = ["http1", "client"] }
hyper-util = { workspace = true, features = ["tokio"] }
http-body-util.workspace = true
bytes.workspace = true
serde_json.workspace = true
crc32fast.workspace = true

# UFFD lazy restore is a Linux-kernel feature (userfaultfd(2)); these only build
# on Linux. On macOS the uffd module is cfg'd out, so the rest of the crate still
# compiles and tests there.
[target.'cfg(target_os = "linux")'.dependencies]
userfaultfd = "0.8"
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "net", "io-util", "rt-multi-thread"] }
uuid.workspace = true
